単語難易度まで追加

--- a/templates/defult_form.html
+++ b/templates/defult_form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-日本語を入れてね
+かんたんにしたい日本語はなんですか？
 <form action="/" method="POST">
-    <input name="word"></input>
+    <input name="input_word"></input>
 </form>
