--- a/templates/return_form.html
+++ b/templates/return_form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-{{word}}ににている単語は{{unnko}}です！
+{{word}}ににている単語は<font color="red">{{unnko}}</font>です！
+<br>かんたんにしたい日本語はなんですか？</br>
 <form action="/" method="POST">
-    <input name="word"></input>
+    <input name="input_word"></input>
 </form>
