HTMLを正式なものに対応させた

--- a/templates/demo_2.html
+++ b/templates/demo_2.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<form action="/" method="post">
 <html>
     <head>
         <meta charset="utf-8">
@@ -6,11 +7,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="demo.css">
+        <link rel="stylesheet" href="static/demo.css">
             <title>J2J試作</title>
     </head>
     <body>
-        <header class="navigation"><a href="demo.html"><img src="ロゴ.jpg" height="30" width="40"></a></header>
+        <header class="navigation"><a href="demo.html"><img src="static/ロゴ.jpg" height="30" width="40"></a></header>
             <main>
                 <div class="kantan">
                     <p><font size="20">むずかしい日本語をかんたんにします</font></p>
@@ -18,17 +19,17 @@
                      <div class="box1">
                          <div class="box2">
                             <font size="5">むずかしい日本語</font>
-                            <div class="kantan"><font size="8">勤務する</font></div>
-                            <img src="ya.png" height="50" width="90"><br>
+                            <div class="kantan"><font size="8">{{ words.main }}</font></div>
+                            <img src="static/ya.png" height="50" width="90"><br>
                             <font size="5">かんたんな日本語</font>
-                            <div class="kantan"><font size="8">はたらく</font></div>
+                            <div class="kantan"><font size="8">{{ words.n1 }}</font></div>
                             <table>
                                 <tr><th><font color="#000099" size="5">似ていることば</font></th></tr>
-                                <tr><th>しごとをする</th></tr>
-                                <tr><th>勉強をする</th></tr>
-                                <tr><th>労働をする</th></tr>
-                                <tr><th>社畜</th></tr>
-                                <tr><th>まなぶ</th></tr>
+                                <tr><th>{{ words.n2 }}</th></tr>
+                                <tr><th>{{ words.n3 }}</th></tr>
+                                <tr><th>{{ words.n4 }}</th></tr>
+                                <tr><th>{{ words.n5 }}</th></tr>
+                                <tr><th>{{ words.n6 }}</th></tr>
                             </table>
                          </div>
                     </div><br>
@@ -39,3 +40,4 @@
             </main>
     </body>
 </html>
+</form>
