類語推類AIがFlaskで動いた

--- a/templates/demo_2.html
+++ b/templates/demo_2.html
@@ -11,7 +11,7 @@
             <title>J2J試作</title>
     </head>
     <body>
-        <header class="navigation"><a href="demo.html"><img src="static/ロゴ.jpg" height="30" width="40"></a></header>
+        <header class="navigation"><a href="templates/demo.html"><img src="static/ロゴ.jpg" height="30" width="40"></a></header>
             <main>
                 <div class="kantan">
                     <p><font size="20">むずかしい日本語をかんたんにします</font></p>
@@ -34,8 +34,8 @@
                          </div>
                     </div><br>
                      <div>
-                        <a href="demo.html"><button class="btn btn-primary p-4">わかった</button></a> 
-                        <a href="demo.html"><button class="btn btn-primary p-4">わからない</button></a>
+                        <a href="/"><button class="btn btn-primary p-4">わかった</button></a> 
+                        <a href="/"><button class="btn btn-primary p-4">わからない</button></a>
                     </div>
             </main>
     </body>
