ページ間の遷移を実装・階層の整理
HTMLで回想をしっかり意識してインデントをした

--- a/script/syanai_hack/templates/48e_error.html
+++ b/script/syanai_hack/templates/48e_error.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <form class="" action="index.html" method="post">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-{{ word }}は存在しないよ！
-  </body>
-</html>
+<form action="/" method="post">
+  <html lang="en" dir="ltr">
+    <head>
+      <meta charset="utf-8">
+      <title></title>
+    </head>
+    <body>
+      <font color="red">{{ word }}</font>は存在しないよ！
+      <a href="/"><button type="button" name="button">戻る</button></a>
+    </body>
+  </html>
 </form>
